Fix zoom problem when focus on input tag (https://stackoverflow.com/questions/46494681/meta-tag-form-field-zooms-on-focus-but-does-not-un-zoom-when-on-focus-out-on-mo)

--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,7 @@ ul {
     list-style-type: none;
 }
 
+input {
+    font-size: 16px;
+}
 
